--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -34,6 +34,10 @@
         {
           "path": "/transition",
           "name": "内置过渡动画"
+        },
+        {
+          "path": "/test",
+          "name": "测试页面"
         }
       ]
     },
