添加calendar 日历控件

--- a/components.json
+++ b/components.json
@@ -60,6 +60,7 @@
   "carousel-item": "./packages/carousel-item/index.js",
   "collapse": "./packages/collapse/index.js",
   "collapse-item": "./packages/collapse-item/index.js",
+  "calendar": "./packages/calendar/index.js",
   "cascader": "./packages/cascader/index.js",
   "color-picker": "./packages/color-picker/index.js",
   "transfer": "./packages/transfer/index.js",
