--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.0",
     "deepmerge": "^1.2.0",
     "jquery": "^3.3.1",
+    "linq": "^3.2.0",
     "normalize-wheel": "^1.0.1",
     "throttle-debounce": "^1.0.1",
     "vuedraggable": "^2.14.1"
