--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "linq": "^3.2.0",
     "normalize-wheel": "1.0.1",
     "throttle-debounce": "1.0.1",
-    "vuedraggable": "2.14.1"
+    "vuedraggable": "^2.20.0"
   },
   "peerDependencies": {
     "vue": "2.5.2"
