--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eg-element-ui",
-  "version": "2.3.12",
+  "version": "2.3.17",
   "description": "A Component Library for Vue.js.",
   "main": "lib/element-ui.common.js",
   "files": [
@@ -37,6 +37,9 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:ElemeFE/element.git"
+  },
+  "publishConfig": { 
+    "registry": "http://220.189.207.21:9000/repository/eaglesoft/"
   },
   "homepage": "http://element.eleme.io",
   "keywords": [
