--- a/.babelrc
+++ b/.babelrc
@@ -5,9 +5,9 @@
     "utils": {
       "plugins": [
         ["module-resolver", {
-          "root": ["eg-element-ui"],
+          "root": ["element-ui"],
           "alias": {
-            "element-ui/src": "eg-element-ui/lib"
+            "element-ui/src": "element-ui/lib"
           }
         }]
       ]
