--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -68,6 +68,10 @@
               "title": "Icon 图标"
             },
             {
+              "path": "/icon_eg",
+              "title": "Icon 图标 eg版本"
+            },
+            {
               "path": "/button",
               "title": "Button 按钮"
             },
