修复分页控件向左箭头不显示的bug

--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
         ["module-resolver", {
           "root": ["eg-element-ui"],
           "alias": {
-            "eg-element-ui/src": "eg-element-ui/lib"
+            "element-ui/src": "eg-element-ui/lib"
           }
         }]
       ]
