--- a/components.json
+++ b/components.json
@@ -69,5 +69,6 @@
   "aside": "./packages/aside/index.js",
   "main": "./packages/main/index.js",
   "footer": "./packages/footer/index.js",
-  "drawer": "./packages/drawer/index.js"
+  "drawer": "./packages/drawer/index.js",
+  "image": "./packages/image/index.js"
 }
