--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eg-element-ui",
-  "version": "2.3.43",
+  "version": "2.3.44",
   "description": "A Component Library for Vue.js.",
   "main": "lib/element-ui.common.js",
   "files": [
@@ -67,17 +67,21 @@
     "vue": "2.5.2"
   },
   "devDependencies": {
-    "algoliasearch": "3.24.5",
-    "babel-cli": "6.14.0",
-    "babel-core": "6.14.0",
-    "babel-loader": "6.2.5",
-    "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-module-resolver": "2.2.0",
-    "babel-plugin-syntax-jsx": "6.8.0",
-    "babel-plugin-transform-vue-jsx": "3.3.0",
-    "babel-preset-es2015": "6.14.0",
+    "@vue/component-compiler-utils": "^2.6.0",
+    "algoliasearch": "^3.24.5",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-module-resolver": "^2.2.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-regenerator-runtime": "^6.5.0",
+    "babel-preset-es2015": "6.14.0",
+    "es6-promise": "4.0.5",
     "chai": "3.5.0",
     "cheerio": "0.18.0",
     "chokidar": "1.7.0",
@@ -89,7 +93,6 @@
     "cp-cli": "1.0.2",
     "cross-env": "3.1.3",
     "css-loader": "0.28.7",
-    "es6-promise": "4.0.5",
     "eslint": "4.14.0",
     "eslint-config-elemefe": "0.1.1",
     "eslint-loader": "1.9.0",
