--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eg-element-ui",
-  "version": "2.3.48",
+  "version": "2.3.49",
   "description": "A Component Library for Vue.js.",
   "main": "lib/element-ui.common.js",
   "files": [
@@ -75,8 +75,8 @@
     "babel-plugin-module-resolver": "2.2.0",
     "babel-plugin-syntax-jsx": "6.8.0",
     "babel-plugin-transform-vue-jsx": "3.3.0",
-    "babel-preset-es2015": "6.14.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "6.14.0",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "3.5.0",
     "cheerio": "0.18.0",
@@ -93,7 +93,7 @@
     "eslint": "4.14.0",
     "eslint-config-elemefe": "0.1.1",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-html": "4.0.1",
+    "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-json": "1.2.0",
     "extract-text-webpack-plugin": "3.0.1",
     "file-loader": "1.1.5",
