--- a/components.json
+++ b/components.json
@@ -72,5 +72,6 @@
   "footer": "./packages/footer/index.js",
   "drawer": "./packages/drawer/index.js",
   "image": "./packages/image/index.js",
-  "divider": "./packages/divider/index.js"
+  "divider": "./packages/divider/index.js",
+  "eg-dialog": "./packages/eg-dialog/index.js"
 }
