--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jquery": "3.3.1",
     "linq": "^3.2.0",
     "normalize-wheel": "1.0.1",
+    "spark-md5": "^3.0.2",
     "throttle-debounce": "1.0.1",
     "vuedraggable": "2.24.3"
   },
@@ -146,6 +147,7 @@
     "vue-template-es2015-compiler": "1.6.0",
     "webpack": "3.7.1",
     "webpack-dev-server": "2.9.1",
-    "webpack-node-externals": "1.6.0"
+    "webpack-node-externals": "1.6.0",
+    "eg-private-utils": "^0.1.2"
   }
 }
