timeline从2.7版本迁移过来

--- a/components.json
+++ b/components.json
@@ -73,5 +73,7 @@
   "drawer": "./packages/drawer/index.js",
   "image": "./packages/image/index.js",
   "divider": "./packages/divider/index.js",
+  "timeline": "./packages/timeline/index.js",
+  "timeline-item": "./packages/timeline-item/index.js",
   "eg-dialog": "./packages/eg-dialog/index.js"
 }
