--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "eg-element-ui",
-  "version": "2.5.4",
+  "version": "2.5.5",
   "description": "A Component Library for Vue.js.",
-  "main": "lib/element-ui.common.js",
+  "main": "src/index.js",
   "files": [
     "lib",
     "src",
