--- a/components.json
+++ b/components.json
@@ -75,5 +75,6 @@
   "divider": "./packages/divider/index.js",
   "timeline": "./packages/timeline/index.js",
   "timeline-item": "./packages/timeline-item/index.js",
-  "eg-dialog": "./packages/eg-dialog/index.js"
+  "eg-dialog": "./packages/eg-dialog/index.js",
+  "popconfirm": "./packages/popconfirm/index.js"
 }
